--- a/aplicacion/app/build.gradle
+++ b/aplicacion/app/build.gradle
@@ -53,6 +53,7 @@ dependencies {
     //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
+    implementation 'com.google.android.material:material:1.4.0'
     //coroutine scopes
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
     testImplementation 'junit:junit:4.12'
