Update material library version to 1.11.0 in app/build.gradle Update application name to ETSIINDOOR in AndroidManifest.xml Update deviceID variable to ETSIINDOOR.deviceID in LoginActivity.kt and RegisterActivity.kt Update setupForegroundService() method to ETSIINDOOR.setupForegroundService() in MainActivity.kt Rename BeaconReferenceApplication.kt to ETSIINDOOR.kt

--- a/aplicacion/app/src/main/AndroidManifest.xml
+++ b/aplicacion/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
     <uses-permission android:name="android.permission.BLUETOOTH_CONNECT"/>
     <!--  IMPORTNATE QUITAR android:usesCleartextTraffic="true" ya que podría acceder a HTTP, mi api debe tener certificados ya que sino fallará-->
     <application
-        android:name="BeaconReferenceApplication"
+        android:name="ETSIINDOOR"
         
         android:usesCleartextTraffic="true"
         android:allowBackup="true"
