Creación de Actividad para ver las personas por habitación

--- a/aplicacion/app/src/main/AndroidManifest.xml
+++ b/aplicacion/app/src/main/AndroidManifest.xml
@@ -27,6 +27,7 @@
         <activity android:name=".MonitorizarActivity"/>
         <activity android:name=".LoginActivity"/>
         <activity android:name=".RegisterActivity"/>
+        <activity android:name=".PersonasPorHabitacionActivity"/>
         <activity android:name=".MainActivity" android:exported="true">
 
             <intent-filter>
