Implementación de habitaciónPorLetra

--- a/aplicacion/app/src/main/AndroidManifest.xml
+++ b/aplicacion/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
         <activity android:name=".LoginActivity"/>
         <activity android:name=".RegisterActivity"/>
         <activity android:name=".PersonasPorHabitacionActivity"/>
+        <activity android:name=".HabitacionPorLetraActivity"/>
         <activity android:name=".MainActivity" android:exported="true">
 
             <intent-filter>
