Creación de histórico en habitación

--- a/aplicacion/app/src/main/AndroidManifest.xml
+++ b/aplicacion/app/src/main/AndroidManifest.xml
@@ -31,6 +31,7 @@
 
         <activity android:name=".PersonasPorHabitacionActivity"/>
         <activity android:name=".HabitacionPorLetraActivity"/>
+        <activity android:name=".HistoricoPersonas"/>
         <activity android:name=".MainActivity" android:exported="true">
 
             <intent-filter>
