--- a/aplicacion/app/build.gradle
+++ b/aplicacion/app/build.gradle
@@ -54,6 +54,7 @@ dependencies {
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.3.2'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.3.2"
     implementation 'com.google.android.material:material:1.11.0'
+    implementation 'com.wdullaer:materialdatetimepicker:4.2.3'
     implementation 'net.danlew:android.joda:2.12.7'
     //coroutine scopes
     implementation "androidx.lifecycle:lifecycle-runtime-ktx:2.2.0"
