--- a/aplicacion/app/src/main/AndroidManifest.xml
+++ b/aplicacion/app/src/main/AndroidManifest.xml
@@ -14,21 +14,17 @@
     <!--  IMPORTNATE QUITAR android:usesCleartextTraffic="true" ya que podría acceder a HTTP, mi api debe tener certificados ya que sino fallará-->
     <application
         android:name="ETSIINDOOR"
-        
-        android:usesCleartextTraffic="true"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/Theme.MyAppTheme">
 
         <activity android:name=".MapaActivity"/>
         <activity android:name=".MonitorizarActivity"/>
         <activity android:name=".LoginActivity"/>
-        <activity android:name=".RegisterActivity"
-            android:theme="@style/Theme.MaterialComponents.Light.DarkActionBar"/>
-
+        <activity android:name=".RegisterActivity"/>
         <activity android:name=".PersonasPorHabitacionActivity"/>
         <activity android:name=".HabitacionPorLetraActivity"/>
         <activity android:name=".HistoricoPersonas"/>
