--- a/aplicacion/app/src/main/AndroidManifest.xml
+++ b/aplicacion/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".EntradasPorLetraYFechaActivity" android:exported="false"/>
         <activity android:name=".PersonasActualPorLetraActivity" android:exported="false"/>
         <activity android:name=".PersonasActualPorLetraYFechaActivity" android:exported="false"/>
+        <activity android:name=".MandarAvisoActivity" android:exported="false"/>
         <activity android:name=".MainActivity" android:exported="true">
 
             <intent-filter>
