Lista de usuarios para admin implementada

--- a/aplicacion/app/src/main/AndroidManifest.xml
+++ b/aplicacion/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".PersonasActualPorLetraActivity" android:exported="false"/>
         <activity android:name=".PersonasActualPorLetraYFechaActivity" android:exported="false"/>
         <activity android:name=".MandarAvisoActivity" android:exported="false"/>
+        <activity android:name=".UsersActivity" android:exported="false"/>
         <activity android:name=".MainActivity" android:exported="true">
 
             <intent-filter>
