--- a/aplicacion/app/build.gradle
+++ b/aplicacion/app/build.gradle
@@ -10,7 +10,7 @@ android {
     }
 
     defaultConfig {
-        applicationId "org.altbeacon.beaconreference"
+        applicationId "org.altbeacon.etsiindoor"
         minSdkVersion 26
         targetSdkVersion 34
         versionCode 1
@@ -35,7 +35,7 @@ android {
     kotlinOptions {
         jvmTarget = '17'
     }
-    namespace 'org.altbeacon.beaconreference'
+    namespace 'org.altbeacon.etsiindoor'
 }
 
 dependencies {
